update meta data

--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" />
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
+    <meta name="description" content="Ibalaradian | Junior Full-Stack Web Developer" />
+    <meta name="keyword" content="jasa pembuatan website, jasa desain website, saya pembuatan aplikasi, jasa desain aplikasi, ui ux desainer, reelance web developer, full-stack developer, web developer indonesia, front-end developer, back-end developer, react js developer, vue js developer, node js developer, express js developer, laravel developer, codeigniter developer, wordpress developer, e-commerce website, custom website development, responsive web design, website optimization, seo friendly website, javascript developer, html css developer, freelance programmer, software developer, web application developer" />
+
+    <meta name="author" content="M Ardian Iqbal" />
+    <meta name="theme-color" content="#1D0F3C" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="msvalidate.01" content="" />
+    <meta name="google-site-verification" content="" />
+
+    <meta name="Geo.Placename" content="Indonesia" />
+    <meta name="Geo.Country" content="ID" />
+
+    <meta property="og:title" content="Ibalaradian | Junior Full-Stack Web Developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ibalardian.vercel.app/" />
+    <meta property="og:image" content="/vite.svg" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:description" content="Ibalaradian | Junior Full-Stack Web Developer" />
+    <meta property="og:site_name" content="Ibalaradian | Junior Full-Stack Web Developer" />
+    <meta property="og:locale" content="id_ID" />
+    <meta property="fb:pages" content="" />
+    <meta property="fb:admins" content="" />
+    <meta property="twitter:card" content="Summary" />
+    <meta property="twitter:url" content="https://ibalardian.vercel.app/" />
+    <meta property="twitter:title" content="Ibalaradian | Junior Full-Stack Web Developer" />
+    <meta property="twitter:image" content="/vite.svg" />
+    <meta property="twitter:creator" content="RG Management" />
+
+    <meta name="apple-mobile-web-app-title" content="Ibalaradian | Junior Full-Stack Web Developer" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Ibalardian | Junior Full-Stack Developer</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" /></div>
 
     <!-- Main Js -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" /></script>
   
     <!-- Fontawesome -->
-    <script type="text/javascript" src="https://kit.fontawesome.com/a97c835882.js"></script>
+    <script type="text/javascript" src="https://kit.fontawesome.com/a97c835882.js" /></script>
   </body>
 </html>
